paperless/CiliumNetworkPolicy-paperless-nextcloud-importer.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: paperless-nextcloud-importer
  namespace: paperless
spec:
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: kubernetes-ingress
            io.kubernetes.pod.namespace: haproxy
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: paperless-nextcloud-importer
